@@ -26,5 +26,6 @@
   6c149bb701714b06cba818db2ad055ec9b6bbbe3 2011101400 mingw32-libunistring.xml
   7f7474478d1ca1464d391beb0bd574a48a745315 2011101100 mingw32-pdcurses.xml
   7417c364a3f3cd62c24ac7af0da190be834cc79a 2013091500 mingw32-tcltk.xml
+  b211efd2b8cd26d322e60debee15981cc5af7bf7 2013092200 mingw32-xerces-c.xml
 #
 # $RCSfile$: end of file
