@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   db18b5bc0eea58053df8775b1c0522e12751c128 2013090900 mingw32-mpc.xml
   e3b21976e887e91c159816ae10468bba2950cc6a 2013090900 mingw32-mpfr.xml
-  dd0159ccb7d5d32929c1ec79577eda406cf16ac9 2013092200 mingw32-package-list.xml
+  1413ad59660ad963082e7de10c31bbb725116aee 2013092201 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
